--- a/client/package.json
+++ b/client/package.json
@@ -7,5 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Kevin Morisette, Jinny Huang, Nawar Tamawi, Shawn Yates",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "actioncable": "^5.1.1",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.5",
+    "react-router": "^4.1.1",
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.6.0"
+  }
 }
