--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Kevin Morisette, Jinny Huang, Nawar Tamawi, Shawn Yates",
+  "author": "Kevin Morissette, Jinny Huang, Nawar Tamawi, Shawn Yates",
   "license": "ISC",
   "dependencies": {
     "actioncable": "^5.1.1",
