--- a/api_server/Gemfile
+++ b/api_server/Gemfile
@@ -14,6 +14,7 @@ gem 'pg', '~> 0.18'
 gem 'puma', '~> 3.7'
 gem 'active_model_serializers', '~> 0.10.2'
 gem 'jwt', '~> 1.5'
+gem 'carrierwave', '~> 1.0'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 # gem 'jbuilder', '~> 2.5'
 # Use Redis adapter to run Action Cable in production
