--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,28 @@
   "license": "ISC",
   "dependencies": {
     "actioncable": "^5.1.1",
-    "node-sass": "^4.5.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0"
+  }, 
+  "devDependencies": {
+    "babel-core": "6.10.4",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "6.0.1",
+    "babel-preset-es2015": "6.9.0",
+    "babel-preset-react": "6.11.1",
+    "babel-preset-stage-0": "6.5.0",
+    "css-loader": "0.23.1",
+    "eslint": "2.7.0",
+    "eslint-plugin-react": "5.2.2",
+    "node-sass": "3.8.0",
+    "sass-loader": "6.0.3",
+    "sockjs-client": "^1.1.1",
+    "style-loader": "0.13.1",
+    "webpack": "1.13.1",
+    "webpack-dev-server": "1.14.1"
   }
 }
