--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch-sass":"./node_modules/node-sass/bin/node-sass --watch --recursive --output styles stylesheets/sass"},
+    "watch-sass": "./node_modules/node-sass/bin/node-sass --watch --recursive --output styles stylesheets/sass"
+  },
   "author": "Kevin Morissette, Jinny Huang, Nawar Tamawi, Shawn Yates",
   "license": "ISC",
   "dependencies": {
@@ -16,7 +17,7 @@
     "react-router": "^4.1.1",
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0"
-  }, 
+  },
   "devDependencies": {
     "babel-core": "6.10.4",
     "babel-eslint": "^7.2.3",
@@ -26,6 +27,7 @@
     "babel-preset-stage-0": "6.5.0",
     "css-loader": "0.23.1",
     "eslint": "2.7.0",
+    "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-react": "5.2.2",
     "node-sass": "3.8.0",
     "sass-loader": "6.0.3",
