--- a/api_server/app/assets/package.json
+++ b/api_server/app/assets/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "final_project_client",
-  "version": "0.0.1",
-  "description": "Final Project Client",
+  "name": "api_server",
+  "version": "1.0.0",
+  "description": "Bridge App",
   "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch-sass": "./node_modules/node-sass/bin/node-sass --watch --recursive --output styles stylesheets/sass"
+    "test": "echo \"Errocd cdr: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "Kevin Morissette, Jinny Huang, Nawar Tamawi, Shawn Yates",
   "license": "ISC",
   "dependencies": {
-    "actioncable": "^5.1.1",
+    "axios": "^0.16.1",
+    "babel": "^6.23.0",
+    "babel-preset-es2015": "^6.9.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
-    "react-router-redux": "^4.0.8",
-    "redux": "^3.6.0"
+    "react-router-redux": "^4.0.8"
   },
   "devDependencies": {
     "babel-core": "6.10.4",
@@ -32,7 +35,7 @@
     "sass-loader": "6.0.3",
     "sockjs-client": "^1.1.1",
     "style-loader": "0.13.1",
-    "webpack": "^1.13.1",
+    "webpack": "1.13.1",
     "webpack-dev-server": "1.14.1"
   }
 }
