--- a/api_server/app/assets/package.json
+++ b/api_server/app/assets/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "actioncable": "^5.1.1",
+    "axios": "^0.16.1",
     "node-sass": "^4.5.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
