Completed 'add content ' modal

--- a/api_server/app/assets/package.json
+++ b/api_server/app/assets/package.json
@@ -13,6 +13,7 @@
     "actioncable": "^5.1.1",
     "node-sass": "^4.5.3",
     "react": "^15.5.4",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
     "react-modal": "^1.7.7",
     "react-redux": "^5.0.5",
