--- a/api_server/app/assets/package.json
+++ b/api_server/app/assets/package.json
@@ -4,8 +4,9 @@
   "description": "Final Project Client",
   "main": "index.js",
   "scripts": {
+    "start": "webpack -d --display-reasons --watch --display-chunks --progress",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch-sass": "./node_modules/node-sass/bin/node-sass --watch --recursive --output styles stylesheets/sass"
+    "watch-sass": "./node_modules/node-sass/bin/node-sass --watch --recursive --output stylesheets stylesheets/sass"
   },
   "author": "Kevin Morissette, Jinny Huang, Nawar Tamawi, Shawn Yates",
   "license": "ISC",
