--- a/api_server/Gemfile
+++ b/api_server/Gemfile
@@ -17,6 +17,7 @@ gem 'jwt', '~> 1.5'
 gem 'carrierwave', '~> 1.0'
 gem 'react-rails'
 gem 'mini_magick', '~> 4.3'
+gem 'redis', '~>3.2'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 gem 'jbuilder', '~> 2.5'
 # Use Redis adapter to run Action Cable in production
