--- a/api_server/app/assets/package.json
+++ b/api_server/app/assets/package.json
@@ -13,16 +13,6 @@
   "dependencies": {
     "actioncable": "^5.1.1",
     "axios": "^0.16.1",
-    "node-sass": "^4.5.3",
-    "react": "^15.5.4",
-    "react-bootstrap": "^0.31.0",
-    "react-dom": "^15.5.4",
-    "react-modal": "^1.7.7",
-    "react-redux": "^5.0.5",
-    "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1",
-    "react-router-redux": "^4.0.8",
-    "redux": "^3.6.0",
     "babel-core": "6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-loader": "7.0.0",
@@ -30,13 +20,23 @@
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
     "css-loader": "0.28.3",
-    "node-sass": "4.5.3",
-    "sass-loader": "6.0.5",
-    "style-loader": "0.18.1",
-    "webpack": "^2.6.1",
     "eslint": "3.19.0",
     "eslint-plugin-import": "^2.3.0",
-    "eslint-plugin-react": "7.0.1"
+    "eslint-plugin-react": "7.0.1",
+    "node-sass": "4.5.3",
+    "react": "^15.5.4",
+    "react-bootstrap": "^0.31.0",
+    "react-dom": "^15.5.4",
+    "react-load-script": "0.0.3",
+    "react-modal": "^1.7.7",
+    "react-redux": "^5.0.5",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.6.0",
+    "sass-loader": "6.0.5",
+    "style-loader": "0.18.1",
+    "webpack": "^2.6.1"
   },
   "devDependencies": {
     "webpack-dev-server": "2.4.5"
