--- a/api_server/Gemfile
+++ b/api_server/Gemfile
@@ -14,6 +14,7 @@ gem 'pg', '~> 0.18'
 gem 'puma', '~> 3.7'
 gem 'active_model_serializers', '~> 0.10.2'
 gem 'jwt', '~> 1.5'
+gem 'coffee'
 gem 'carrierwave', '~> 1.0'
 gem 'react-rails'
 gem 'mini_magick', '~> 4.3'
