--- a/api_server/.gitignore
+++ b/api_server/.gitignore
@@ -16,6 +16,7 @@
 .byebug_history
 app/assets/javascripts/bundle.js
 app/assets/javascripts/bundle.js.map
+node_modules/
 .vscode
 public/uploads/
 .env
